# divicards

./: .gitignore  .oxfmtrc.json  Cargo.toml  README.md  areas.rs  cell.json  histoire.setup.ts  items.json  leagues.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  q.json  sheets.json  temp.json  temp.ts  tsconfig.json  vite.config.ts
.cargo/: config.toml
card_element/: Cargo.toml  data.json
card_element/src/: base_items_fetcher.rs  drop_level.rs  error.rs  fetcher.rs  images.rs  lib.rs  main.rs  reward.rs  unique.rs
crates/divcord/: Cargo.toml
crates/divcord/benches/: cards.rs  poeData.json  spreadsheet.json
crates/divcord/divcord_test/: Cargo.toml
crates/divcord/example/: Cargo.toml
crates/divcord/src/: cards.rs  parse.rs
crates/divcord/src/dropsource/: id.rs
crates/divcord/src/dropsource/predefined/: area.rs  mod.rs  monster.rs
crates/divcord/src/spreadsheet/: mod.rs  record.rs  rich.rs
crates/divcord/tests/: main.rs
crates/divi-wasm/: Cargo.toml
crates/divi-wasm/src/: lib.rs
crates/generate_website_files/: .gitignore  Cargo.toml
crates/generate_website_files/src/: avatars.rs  main.rs
crates/ninja/: Cargo.toml
crates/ninja/src/: lib.rs
divcord/: .gitignore  Cargo.toml  README.md
divcord/benches/: poeData.json  spreadsheet.json
divcord/divcord_test/: Cargo.toml
divcord/divcord_test/data/: cards.json  divcord_table.json  maps.json  poeData.json
divcord/divcord_test/src/: lib.rs
divcord/example/: .env.template  Cargo.toml
divcord/example/data/: cards.json  divcord_table.json  maps.json
divcord/example/src/: main.rs
divcord/examples/basic/: Cargo.toml
divcord/examples/basic/data/: poeData.json
divcord/examples/basic/src/: main.rs
divcord/src/: cards.rs  cardsnew.rs  consts.rs  error.rs  lib.rs  loader.rs  parse.rs
divcord/src/dropsource/: area.rs  bosses_notes.txt  id.rs  mod.rs  monster.rs  new_area.rs  new_monster.rs  other.rs  parse.rs  parse_id.rs
divcord/src/dropsource/predefined/: monster.rs  other.rs
divcord/src/spreadsheet/: fetcher.rs  fs_cache_fetcher.rs  load.rs  mod.rs  record.rs  rich.rs
divcord/src/table/: load.rs  mod.rs  rich.rs  table_record.rs
divcord/tests/: main.rs
divcord_wasm/: Cargo.toml
divcord_wasm/src/: lib.rs
divi/: .gitignore  Cargo.toml  Crucible-prices.json  README.md  amount.csv  ninja-data.json  p.json  serde-values.json  values.json  values2.json
divi/examples/: example-2.csv
divi/examples/csv/: Cargo.toml
divi/examples/csv/src/: main.rs
divi/examples/json/: Cargo.toml
divi/examples/json/src/: main.rs
divi/examples/merge/: Cargo.toml
divi/examples/merge/src/: main.rs
divi/examples/nameamount/: Cargo.toml
divi/examples/nameamount/src/: main.rs
divi/examples/prices/: Cargo.toml
divi/examples/prices/src/: main.rs
divi/examples/sheets/: Cargo.toml  values.json
divi/examples/sheets/src/: main.rs
divi/src/: card_record.rs  cards.rs  consts.rs  error.rs  league.rs  lib.rs  prices.rs  sample.rs
generate_website_files/: .env.template  Cargo.toml  poeData.json
generate_website_files/data/: cardElementData.json  cards.json  divcord_table.json  mapBosses.json  poeData.json
generate_website_files/src/: avatars.rs  main.rs
playground/: .gitignore  Cargo.toml  cards.json  cards2.json  empty.json  from_wasm.json  leagues.json  mapjson.json  records.json
playground/data/: acts.json  cards.json  divcord_table.json  mapBosses.json  maps.json  poeData.json
playground/src/: main.rs
poe_data/: Cargo.toml  extractActAreaPopupData.js  fetchMapBosses.js
poe_data/src/: act.rs  cards.rs  consts.rs  error.rs  fetchers.rs  league.rs  lib.rs  loader.rs  loaders.rs  mapbosses.rs  maprsss.rs  maps.rs
poe_data/src/maps/: fetch.rs  icon.rs  mod.rs  wiki.rs
scripts/: Cargo.toml  H.json  ISource.interface.ts  Source.ts  areas.json  card-data.json  cards.json  common.json  const_areas.json  data.json  drops-from.json  dropsources.json  empty.json  extractActAreaPopupData.js  hypothesis-tags.json  map.json  maps.json  multiple-map.json  notes.json  parsed-table.json  parsed_areas.json  records.json  reward.html  sheet.json  sources.json  tags.json  total.csv
scripts/data/: acts.json  cards.json  divcord_table.json  maps.json  poeData.json
scripts/files/: act1.html  areas.json
scripts/jsons/: acts.json  cards_without_dropsorces.json  confidence-map.json  divcord_table.json  drops-from.json  drops.json  hypothesis-map.json  hypothesis-tags.json  m.json  map.json  multiple-hypothesis-map.json  multiple-map.json  notes.json  parsed-table.json  parsed_act_areas.json  rewards-with-size.json  sheet.json  sources.json  unparsed_sources.json  unrecognized.json  urls.json  values.json  wikibosses.json
scripts/src/: act.rs  card_element.rs  cards.rs  comments.rs  consts.rs  dropconsts.rs  dropsource.rs  error.rs  loader.rs  main.rs  mapbosses.rs  maps.rs  monster.rs  poe_data.rs  reward.rs  rich.rs  scripts.rs  table.rs  table_record.rs
scripts/src/card_element/: mod.rs  reward.rs
scripts/src/dropsource/: area.rs  bosses_notes.txt  dropconsts.rs  mod.rs  monster.rs  parse.rs
scripts/src/poe_data/: act.rs  cards.rs  fetchMapBosses.js  mapbosses.rs  maps.rs  mod.rs
scripts/src/table/: mod.rs  rich.rs  table_record.rs
src/: App.vue  (+6 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/divi/: .gitignore  Cargo.toml  cardNameAmountList.json  example-1.csv  example-3.csv
src-tauri/divi/src/: error.rs
src-tauri/lib/: Cargo.toml
src-tauri/lib/src/: commands.rs  csvm.rs  dev.rs  discord.rs  error.rs  file_card_data.rs  google.rs  lib.rs  oauth.rs  paths.rs  poe.rs  prices.rs  starter_map.rs
src-tauri/lib/src/config/: mod.rs
src-tauri/lib/src/types/: card.rs  mod.rs
src-tauri/lib/src/types/record/: initial_data.rs  mod.rs
src-tauri/lib/src/types/weighted_record/: mod.rs
src-tauri/shared/: Cargo.toml
src-tauri/shared/src/: lib.rs
src-tauri/shared/src/config/: total_divines_config.rs
src-tauri/shared/src/types/record/: initial_data.rs  mod.rs
src-tauri/src/: commands.rs  file_card_data.rs  main.rs  prices.rs  starter_map.rs
(+143 files in other folders)
