[workspace]
resolver = "2"
members = [
    "packages/app/src-tauri",
    "divi",
    "playground",
    "googlesheets",
    "divi/examples/*",
    "card_element",
    "poe_data",
    "divcord",
    "divcord/example",
    "divcord_wasm",
    "fetcher",
    "generate_website_files",
    "divcord/divcord_test"
]

[workspace.package]
version = "0.5.6"
edition = "2021"
repository = "https://github.com/shonya3/divicards"


[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3.0"
