[workspace]
resolver = "2"
members = [
    "crates/*",
    "packages/app/src-tauri",
]

[workspace.package]
version = "0.10.1"
edition = "2021"
repository = "https://github.com/shonya3/divicards"


[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12.4", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3.0"
dotenv = "0.15.0"
project-root = "0.2.2"