[package]
name = "card_element"
version.workspace = true
edition.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {workspace = true}
serde = {workspace = true} 
serde_json = {workspace = true}
regex = "1.10.2"
reqwest = { workspace = true, features = ["blocking"]}
fetcher = {path = "../fetcher"}
poe = { path = "../poe" }
ninja = { path = "../ninja" }
poe_data = { path = "../poe_data", features = ["fetch"] }
slug = "0.1.5"
