[package]
name = "divcord"
version.workspace = true
edition.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {workspace = true} 
serde_json = {workspace = true} 
dotenv = "0.15.0"
googlesheets = {path = "../googlesheets"}
divi = {path = "../divi"}
reqwest = { workspace = true }
strum_macros = "0.25.2"
strum = "0.25.0"
async-trait = "0.1.73"
poe_data = {path = "../poe_data"}

