[package]
name = "divcord_wasm"
version = "0.1.0"
authors = ["shonya3 <poeshonya3@gmail.com>"]
edition = "2021"


[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
serde-wasm-bindgen = "0.6.0"
divcord = { path = "../divcord"}
poe_data = {path = "../poe_data"}
wasm-bindgen = "0.2.87"
# wasm-bindgen-futures = "0.4.37"

js-sys = "0.3.64"
serde_json.workspace = true
# [dependencies.web-sys]
# version = "0.3.4"
# features = [
#   'Headers',
#   'Request',
#   'RequestInit',
#   'RequestMode',
#   'Response',
#   'Window',
# ]

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
lto = true
opt-level = "s"
