[package]
name = "divi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest.workspace = true
serde_json.workspace = true
tracing.workspace = true
tokio.workspace = true
serde.workspace = true
googlesheets ={ path = "../googlesheets"}

csv = "1.2.1"
serde-big-array = "0.5.1"
strsim = "0.10.0"
urlencoding = "2.1.2"
