[package]
name = "divi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest.workspace = true
serde_json.workspace = true
tracing.workspace = true
serde.workspace = true
csv.workspace = true
googlesheets ={ path = "../googlesheets"}
strsim = "0.11"
poe = { path = "../poe"}
ninja = { path = "../ninja" }

[dev-dependencies]
tokio = {workspace = true}

[lints.clippy]
pedantic = "warn"
match_bool = "allow"
cast_precision_loss = "allow"
missing_errors_doc = "allow"