[package]
name = "playground"
version.workspace = true
edition.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {workspace = true}
serde_json = {workspace = true}
divcord = {path = "../divcord", features = ["fs_cache_fetcher"]}
tokio = {workspace = true}
reqwest.workspace = true
dotenv = "0.15.0"
fs_cache_fetcher = {path ="../fs_cache_fetcher"}
divi = {path ="../divi"}
poe_data = {path  = "../poe_data", features = ["fetch"]}
card_element = {path = "../card_element"}
poe = { path = "../poe" }
ninja = { path = "../ninja" }