[package]
name = "poe_data"
version.workspace = true
edition.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {workspace = true}

reqwest = { workspace = true, features = ["blocking"], optional = true}
googlesheets = {path = "../googlesheets", optional = true}
dotenv = { version = "0.15.0", optional = true}
divi = {path = "../divi", optional = true}
playwright = {version = "0.0.20", optional = true}
serde_json = {workspace = true, optional = true}
fetcher = {path = "../fetcher", optional = true}
tokio = {workspace = true, optional = true}


[features]
default = []
fetch = ["dep:serde_json", "dep:playwright", "dep:divi", "dep:dotenv", "dep:googlesheets", "dep:reqwest", "dep:fetcher", "dep:tokio"]