[package]
name = "scripts"
version.workspace = true
edition.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {workspace = true} 
tracing = {workspace = true} 
tracing-subscriber = {workspace = true} 
serde = {workspace = true} 
serde_json = {workspace = true} 
dotenv = "0.15.0"
googlesheets = {path = "../googlesheets"}
divi = {path = "../divi"}
scraper = "0.17.1"
reqwest = { workspace = true, features = ["blocking"] }
regex = "1.9.5"
