[package]
name = "scripts"
version.workspace = true
edition.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {workspace = true}
serde_json = {workspace = true}
divcord = {path = "../divcord", features = ["fetch"]}
poe_data = {path = "../poe_data", features = ["fetch"]}
tokio = {workspace = true}