[package]
name = "app"
version = "0.1.8"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib"
path = "lib/src/lib.rs"

# [lib]
# name = "app"
# path = "app/src/lib.rs"

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
shared = {path="shared"}
divi = {path = "../../divi"}


serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["api-all", "updater"] }

tauri-api = "0.7.6"
strsim = "0.10.0"

csv = "1.2.1"
tokio = { version = "1.27", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
reqwest-retry = "0.2.2"

axum = { version = "0.6.12", features = ["headers"] }
oauth2 = "4.3"
keyring = "2.0.2"
open = "4.0.2"
async-trait = "0.1.68"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
