[package]
name = "divcord"
version.workspace = true
edition.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {workspace = true} 
serde_json = {workspace = true} 
dotenv = "0.15.0"
googlesheets = {path = "../googlesheets"}
divi = {path = "../divi"}
reqwest = { workspace = true }
strum_macros = "0.27"
strum = "0.27"
poe_data = {path = "../poe_data"}
fs_cache_fetcher = {path = "../fs_cache_fetcher", optional = true}
slug = "0.1.5"

[features]
default = []
fs_cache_fetcher = ["dep:fs_cache_fetcher", "poe_data/fs_cache_fetcher"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
criterion = "0.7"



[[bench]]
name = "cards"
harness = false