[package]
name = "divi-wasm"
version = "0.1.0"
authors = ["shonya3 <poeshonya3@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
serde-wasm-bindgen = "0.6.4"
divi = { path = "../divi" }
wasm-bindgen = "0.2.92"
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.40"

[profile.release]
lto = true
opt-level = "s"
