[package]
name = "ninja"
version.workspace = true
edition.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
poe = { path = "../poe" }