[package]
name = "divcord_test"
version.workspace = true
edition.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
divcord = {path = "../", features = ["fs_cache_fetcher"]}
tokio = { workspace = true, features = ["full"] }
poe_data = {path = "../../poe_data", features = ["fetch"]}
dotenv.workspace = true
