[package]
name = "divi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.1"
reqwest = "0.11.17"
serde = { version = "1.0.160", features = ["derive"] }
serde-big-array = "0.5.1"
serde_json = "1.0.96"
strsim = "0.10.0"
tokio = { version = "1.28.0", features = ["full"] }
urlencoding = "2.1.2"
