[package]
name = "lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.27", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
reqwest-retry = "0.2.2"
strsim = "0.10.0"
