[package]
name = "basic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
divcord = {path = "../../", features = ["fetch"]}
poe_data = {path = "../../../poe_data", features = ["fetch"]}
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
